--- a/src/app/product-delete/product-delete.component.html
+++ b/src/app/product-delete/product-delete.component.html
@@ -1,11 +1,15 @@
-<h2>Delete Product</h2>
-
-<div *ngIf="product">
-  <p>Are you sure you want to delete the product "{{ product.name }}"?</p>
-  <button (click)="deleteProduct()">Yes, Delete</button>
-  <button (click)="cancel()">Cancel</button>
-</div>
-
-<div *ngIf="!product">
-  <p>Loading...</p>
-</div>
+<section class="container mt-5 d-flex justify-content-center flex-column align-items-center">
+  <h2 class="align-self-start">Eliminar Product</h2>
+  
+  <div *ngIf="product">
+    <p>¿Estás seguro que quieres eliminar el producto: "{{ product.name }}"?</p>
+    <div class="d-flex justify-content-center gap-5">
+      <button (click)="deleteProduct()" class="btn btn-danger">Si, Eliminar</button>
+      <button (click)="cancel()" class="btn btn-secondary">Cancelar</button>
+    </div>
+  </div>
+  
+  <div *ngIf="!product">
+    <p>Loading...</p>
+  </div>
+</section>
