--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -1,8 +1,14 @@
-<h2>Edit Product</h2>
-<form (ngSubmit)="updateProduct()">
-    <label for="name">Name</label>
-    <input id="name" [(ngModel)]="product.name" name="name" required>
-    <label for="price">Price</label>
-    <input id="price" [(ngModel)]="product.price" name="price" required>
-    <button type="submit">Update</button>
-</form>
+<section class="container mt-5">
+    <h2 class="align-self-start">Editar Producto</h2>
+    <form (ngSubmit)="updateProduct()">
+        <label for="name" class="form-label">Nombre del producto:</label>
+        <div class="input-group mb-3">
+            <input id="name" [(ngModel)]="product.name" name="name" type="text" required>
+        </div>
+        <label for="price">Precio del producto:</label>
+        <div class="input-group mb-3">
+            <input id="price" [(ngModel)]="product.price" name="price" type="number" required>
+        </div>
+        <button type="submit" class="btn btn-success">Agregar</button>
+    </form>
+</section>
