--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,9 +1,29 @@
-<h2>Product List</h2>
-<ul>
-    <li *ngFor="let product of products">
-    {{ product.name }} - ${{ product.price }}
-    <button (click)="editProduct(product.id)">Edit</button>
-    <button (click)="deleteProduct(product.id)">Delete</button>
-    </li>
-</ul>
-<button routerLink="/product-add">Add Product</button>
+<section class="container mt-5 d-flex justify-content-center flex-column align-items-center">
+    <h2 class="align-self-start">Lista de productos</h2>
+    <button routerLink="/product-add" class="btn btn-success my-3 align-self-start">Agregar Producto</button>
+    <div class="table-responsive w-100">
+        <table class="table table-striped text-center dt-responsive" id="tablaProductos">
+            <tr class="table-secondary">
+                <th scope="col" style="width: 5%;">#</th>
+                <th scope="col" style="width: 25%;">Nombre</th>
+                <th scope="col" style="width: 20%;">Precio</th>
+                <th scope="col" style="width: 30%;">Opciones</th>
+            </tr>
+            <tbody>
+                <tr *ngFor="let product of products">
+                    <td>{{ product.id }}</td>
+                    <td>{{ product.name }}</td>
+                    <td>{{ product.price }}</td>
+                    <td>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                            <button class="btn btn-primary btn-md" (click)="editProduct(product.id)">Editar</button>
+                            <button class="btn btn-danger btn-md" (click)="deleteProduct(product.id)">Eliminar</button>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
+    
+</section>
