Correcion editar producto

--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -9,6 +9,6 @@
         <div class="input-group mb-3">
             <input id="price" [(ngModel)]="product.price" name="price" type="number" required>
         </div>
-        <button type="submit" class="btn btn-success">Agregar</button>
+        <button type="submit" class="btn btn-primary">Editar</button>
     </form>
 </section>
